k8s_helm/01_apps-without-helm/red/red-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /red
            pathType: Exact
            backend:
              service:
                name: red
                port: 
                  number: 80
